# mpcs51045

./: .gitignore  CMakeLists.txt  README.md
include/can/: batch_decode.h  codec.h  dump.h  errors.h  frame.h  hash.h  message_concept.h  pmr_buffer.h  registry.h  signal.h  static_dispatch.h  typelist.h  visitor.h
messages/: vehicle_messages.h
src/: main.cpp
tests/: test_phase1.cpp  test_roundtrip.cpp
